--- a/pallets/stp258/Cargo.toml
+++ b/pallets/stp258/Cargo.toml
@@ -21,8 +21,6 @@ version = '1.3.4'
 [dependencies]
 adapters = { default-features = false, package = 'storage-adapters', version = '0.0.3', path = '../../storage-adapters' }
 fetch-price = { default-features = false, package = 'fetch-price', version = '0.1.0', path = '../fetch-price' }
-sp-std = { default-features = false, optional = true, version = '2.0.0' }
-
 
 serde = { version = "1.0.118", optional = true }
 frame-support = { default-features = false, version = '2.0.0' }
@@ -32,10 +30,11 @@ orml-traits = { default-features = false, version = '0.3.2' }
 orml-utilities = { default-features = false, version = '0.3.2' }
 
 num-rational = { default-features = false, version = '0.3.2' }
-
 fixed = { default-features = false, version = '1.5.0' }
+config = { default-features = false, version = "0.10.1"}
 
 sp-runtime = { default-features = false, optional = true, version = '2.0.0' }
+sp-std = { default-features = false, optional = true, version = '2.0.0' }
 
 [dev-dependencies]
 sp-core = { default-features = false, version = '2.0.0' }
@@ -51,6 +50,7 @@ default = ['std']
 std = [
     "adapters/std",
     'codec/std',
+    "config/std",
     "fetch-price/std",
     "fixed/std",
     'frame-support/std',
