--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -25,12 +25,11 @@ hex-literal = { optional = true, version = '0.3.1' }
 serde = { features = ['derive'], optional = true, version = '1.0.101' }
 
 # local dependencies
-stp258 = { version = "0.1.0", default-features = false, path = "../pallets/stp258", package = "stp258" }
-serp-tes = { version = "0.1.0", default-features = false, path = "../pallets/serp-tes", package = "serp-tes" }
-serp-market = { version = "0.1.0", default-features = false, path = "../pallets/serp-market", package = "serp-market" }
-fetch-price = { version = "0.1.0", default-features = false, path = "../pallets/fetch-price", package = "fetch-price" }
-price = {version = "0.1.0", default-features = false, path = "../pallets/price", package = "price"}
-pallet-template = { path = '../pallets/template', default-features = false, version = '2.0.0' }
+stp258 = { version = "0.3.1-alpha.3", default-features = false, path = "../SERML/stp258", package = "stp258" }
+serp-tes = { version = "0.3.1-alpha.3", default-features = false, path = "../SERML/serp-tes", package = "serp-tes" }
+serp-market = { version = "0.3.1-alpha.3", default-features = false, path = "../SERML/serp-market", package = "serp-market" }
+fetch-price = { version = "0.3.1-alpha.3", default-features = false, path = "../SERML/fetch-price", package = "fetch-price" }
+price = {version = "0.3.1-alpha.3", default-features = false, path = "../SERML/price", package = "price"}
 
 # Substrate dependencies
 frame-benchmarking = { default-features = false, optional = true, version = '2.0.0' }
@@ -83,7 +82,6 @@ std = [
     'pallet-grandpa/std',
     'pallet-randomness-collective-flip/std',
     'pallet-sudo/std',
-    'pallet-template/std',
     'stp258/std',
     'serp-tes/std',
     'serp-market/std',
